--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,10 @@
     <link href="%PUBLIC_URL%/favicon.ico" rel="shortcut icon"/>
     <meta content="#000000" name="theme-color"/>
     <meta content="width=1280, height=800, user-scalable=no" name="viewport"/>
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-    <meta http-equiv="Pragma" content="no-cache" />
-    <meta http-equiv="Expires" content="0" />
+    <meta content="no-cache, no-store, must-revalidate"
+          http-equiv="Cache-Control"/>
+    <meta content="no-cache" http-equiv="Pragma"/>
+    <meta content="0" http-equiv="Expires"/>
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
