--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 
 
     <link href="%PUBLIC_URL%/manifest.json" rel="manifest"/>
-    <script src="%PUBLIC_URL%/qimessaging.js"></script>
+    <!-- <script src="%PUBLIC_URL%/qimessaging.js"></script> -->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
